페이지 네이션 통합 및 여러가지 정리